# teach-assist

./: .env.example  .env.vercel  .gitignore  .vercelignore  AGENT3_SUMMARY.md  BACKEND_READY.txt  CLAUDE.md  CONTRIBUTING.md  DT1 IA.docx  LICENSE  MASTER_PLAN.md  MISSION_COMPLETE.md  PARALLEL_PLAN.md  PILOT_SETUP_GUIDE.md  PRD.md  README.md  SPEC.md  TeachAssist_Project_Review.docx  TeachAssist_Project_Review.md  middleware.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  test-upload.mjs  tsconfig.tsbuildinfo  vercel.json
app/: globals.css  layout.tsx  page.tsx
backend/: .env.example  .gitignore  CHROMADB_COMPAT.md  INTEGRATION_TEST_RESULTS.md  README.md  TEST_RESULTS.md  frontend.pid  pyproject.toml  requirements.txt
backend/api/: __init__.py  config.py  deps.py  index.py  main.py
backend/api/routers/: __init__.py  chat.py  council.py  grading.py  health.py  narratives.py  planning.py  sources.py  students.py
backend/data/: .gitkeep
backend/libs/: __init__.py  knowledge_service.py  persona_store.py  planning_store.py  rubric_templates.py  student_store.py  table_extractor.py  web_ingester.py
backend/libs/knowledgebeast/: README.md  pyproject.toml  requirements.txt
backend/libs/knowledgebeast/knowledgebeast/: __init__.py
backend/libs/knowledgebeast/knowledgebeast/api/: README.md  __init__.py  app.py  auth.py  middleware.py  models.py  project_auth_middleware.py  reranking_helper.py  routes.py  server.py
backend/libs/knowledgebeast/knowledgebeast/backends/: __init__.py  base.py  chromadb.py  postgres.py  postgres_schema.sql
backend/libs/knowledgebeast/knowledgebeast/cli/: __init__.py  __main__.py  commands.py
backend/libs/knowledgebeast/knowledgebeast/converters/: __init__.py  code_converter.py  image_converter.py  multimodal_converter.py  pdf_converter.py
backend/libs/knowledgebeast/knowledgebeast/core/: __init__.py  builder.py  cache.py  cache_manager.py  chunk_processor.py  circuit_breaker.py  config.py  constants.py  converters.py  embeddings.py  engine.py  heartbeat.py  indexer.py  project_auth.py  project_manager.py  query_engine.py  repository.py  retry_logic.py  vector_store.py
backend/libs/knowledgebeast/knowledgebeast/core/chunking/: __init__.py  base.py  code.py  markdown.py  recursive.py  semantic.py
backend/libs/knowledgebeast/knowledgebeast/core/multimodal/: __init__.py  clip_embeddings.py  ocr_engine.py
backend/libs/knowledgebeast/knowledgebeast/core/query/: __init__.py  expander.py  reformulator.py  semantic_cache.py
backend/libs/knowledgebeast/knowledgebeast/core/reranking/: __init__.py  base.py  cross_encoder.py  mmr.py
backend/libs/knowledgebeast/knowledgebeast/integrations/: __init__.py  fastapi.py  flask.py
backend/libs/knowledgebeast/knowledgebeast/mcp/: __init__.py  config.py  server.py  tools.py  validation.py
backend/libs/knowledgebeast/knowledgebeast/monitoring/: __init__.py  health.py
backend/libs/knowledgebeast/knowledgebeast/templates/: __init__.py
backend/libs/knowledgebeast/knowledgebeast/utils/: __init__.py  logging.py  metrics.py  model_cache.py  observability.py  wordnet_utils.py
backend/libs/knowledgebeast/knowledgebeast/web/: README.md
backend/libs/knowledgebeast/knowledgebeast/web/static/: index.html
backend/tests/: __init__.py  test_council_math_lesson.py  test_council_parent_email.py  test_council_with_lesson.py  test_response_parsing.py
components/: AccommodationsToggle.tsx  ChangePasswordModal.tsx  GlobalLayout.tsx  Providers.tsx  Shell.tsx  ThemeProvider.tsx  ThemeToggle.tsx
data/: contextualTips.ts  helpContent.ts
docs/: API_CLIENT.md  API_SPEC.md  ARCHITECTURE.md  CC4_REUSE_GUIDE.md  DEPLOYMENT.md  DEPLOYMENT_OPTIONS.md  DEPLOYMENT_QUICK_START.md  FINAL_PLAN.md  HANDOFF.md  HELP_ARTICLES.md  MASTER_PLAN.md  PARALLEL_EXECUTION_PLAN.md  PILOT_RECRUITMENT_EMAIL.md  PRD.md  PWA_ARCHITECTURE_PLAN.md  QUICKSTART.md  STATUS.md  V01_COMPLETION_PLAN.md  VERCEL_DEPLOYMENT.md  WELCOME_DASHBOARD.md  WORKTREE_SETUP.md
hooks/: useGlobalShortcuts.ts  (+2 more)
(+122 files in other folders)
